chore: fix z-index for global search input
Refs: IASC-761

--- a/html/themes/custom/iasc_common_design/components/iasc-cd-header-footer/cd-search.css
+++ b/html/themes/custom/iasc_common_design/components/iasc-cd-header-footer/cd-search.css
@@ -34,6 +34,8 @@
 
 .cd-search__submit {
   background: var(--iasc-secondary);
+  /* Temp override cd-form input z-index - see CD-420 */
+  z-index: 11;
 }
 
 .cd-search__submit:focus {
